Bits to hex string codec implementation
New implementation of bits codec targeted to optimize storage space.
Now byte array keeps the data, while name to bit index mapping
remains in codec itself.

Legacy codec usage is replaced with new one, related tests updated.

JIRA: YANGTOOLS-1426
Change-Id: Iba77f251ef9f9d850d6d4c09ccfd8c3b03d8b0ef
Signed-off-by: Ivan Martiniak <ivan.martiniak@pantheon.tech>
Signed-off-by: Ruslan Kashapov <ruslan.kashapov@pantheon.tech>